<resources>
    <string name="app_name">MiniApp1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_message">Message</string>

    <string name="home_second">Home Second</string>
    <string name="desc">photo of uniLJ</string>
    <string name="homeBesedilo">PBD2020</string>
    <string name="homeBesedilo2">Android Mini App 1</string>
    <string name="button_email">SEND GROUP EMAIL</string>
    <string name="button_mms">SEND GROUP MMS</string>
    <string name="share_text">Share</string>
</resources>
