<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="408dp"
        android:layout_height="525dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/uni_lj"
        app:layout_constraintBottom_toTopOf="@+id/textHome1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textHome1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textHome2"
        android:text="@string/homeBesedilo"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textHome2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textHome2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homeBesedilo2"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/textHome1"/>


</androidx.constraintlayout.widget.ConstraintLayout>