<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.messages.MessageFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:text="@string/share_text"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

    <Button
        android:id="@+id/button_email"
        android:layout_width="160dp"
        android:layout_height="81dp"
        android:layout_marginBottom="44dp"
        android:text="@string/button_email"
        app:layout_constraintBottom_toTopOf="@+id/button_mms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_mms"
        android:layout_width="163dp"
        android:layout_height="83dp"
        android:layout_marginBottom="240dp"
        android:text="@string/button_mms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>